# rust_serialport_communication

./: README.md
interface/lib_comm/: Cargo.toml
interface/lib_comm/src/: lib.rs
interface/lib_comm/src/serial/: mod.rs
interface/lib_comm/src/socket/: mod.rs
interface/lib_protocol/: Cargo.toml
interface/lib_protocol/src/: lib.rs  protocol_common.rs
interface/lib_protocol/src/empty/: mod.rs
interface/lib_protocol/src/tm/: mod.rs
interface/vserial/: Cargo.toml
interface/vserial/.cargo/: config
interface/vserial/src/: main.rs
message/: Cargo.toml
message/src/: lib.rs  main.rs_v1  main.rs_v2  main.rs_v3  main.rs_v4  main.rs_v5  main.rs_v6  message_lib.rs  message_lib.rs_v4  message_lib_v5.rs  thread.rs  thread_atp.rs  thread_el1a.rs  thread_uai.rs
ue/: Cargo.toml
ue/src/: main.rs
