[package]
name = "ue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_comm = { path = "../interface/lib_comm" }
lib_protocol = { path = "../interface/lib_protocol" }
message = { path = "../message" }