[package]
name = "ue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_comm = { path = "../interface/lib_comm" }
lib_protocol = { path = "../interface/lib_protocol" }
libudev = "0.3.0"
libudev-sys = "0.1.4"
message = { path = "../message" }
serialport = "4.3.0"
